# agentic-vision

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  INSTALL.md  README.md  test-report-v2.json  test_harness_v2.py
.github/workflows/: canonical-sister-guardrails.yml  install-command-guardrails.yml  release.yml
clients/python/: README.md  pyproject.toml
clients/python/cortex_client/: __init__.py  autostart.py  connection.py  errors.py  sitemap.py
clients/python/tests/: test_sitemap.py
clients/typescript/: README.md  package-lock.json  package.json
clients/typescript/src/: client.ts  connection.ts  index.ts  sitemap.ts
crates/agentic-vision/: Cargo.toml  README.md
crates/agentic-vision-mcp/: Cargo.toml  README.md
crates/agentic-vision-mcp/src/: lib.rs  main.rs  repl.rs
crates/agentic-vision-mcp/src/config/: mod.rs
crates/agentic-vision-mcp/src/prompts/: compare.rs  describe.rs  mod.rs  observe.rs  registry.rs  track.rs
crates/agentic-vision-mcp/src/protocol/: handler.rs  mod.rs  negotiation.rs  validator.rs
crates/agentic-vision-mcp/src/resources/: capture.rs  mod.rs  registry.rs  session.rs  similar.rs  stats.rs  templates.rs  timeline.rs
crates/agentic-vision-mcp/src/session/: manager.rs  mod.rs  tenant.rs
crates/agentic-vision-mcp/src/tools/: mod.rs  registry.rs  session_end.rs  session_start.rs  vision_capture.rs  vision_compare.rs  vision_diff.rs  vision_link.rs  vision_ocr.rs  vision_query.rs  vision_similar.rs  vision_track.rs
crates/agentic-vision-mcp/src/transport/: framing.rs  mod.rs  sse.rs  stdio.rs
crates/agentic-vision-mcp/src/types/: capabilities.rs  error.rs  message.rs  mod.rs  notification.rs  request.rs  response.rs
crates/agentic-vision-mcp/tests/: edge_cases.rs
crates/agentic-vision/src/: capture.rs  diff.rs  embedding.rs  lib.rs  similarity.rs  storage.rs  types.rs
docker/: Dockerfile.full  Dockerfile.lite  docker-compose.yml
docs/: LIMITATIONS.md  REPO_HYGIENE.md  TEST-REPORT-V2.md  api-reference.md  benchmarks.md  concepts.md  faq.md  integration-guide.md  quickstart.md
docs/ecosystem/: CANONICAL_SISTER_KIT.md
docs/guides/: collective-graph.md  framework-integration.md  interactive-sessions.md  quickstart.md  temporal.md  web-compiler.md  wql.md
docs/planning/: 03-implementation.md  05-edge-cases.md
examples/: 01_quickstart.py  02_price_comparison.py  03_pathfinding.py  04_cross_site_comparison.py  05_perceive_page.py  06_langchain_agent.py  07_crewai_researcher.py  08_autogen_agent.py  09_semantic_kernel.py  10_mcp_server_demo.py  11_runtime_status.py  README.md  ollama_vision.rs
integrations/: openapi.yaml
integrations/autogen/: pyproject.toml
integrations/crewai/: pyproject.toml
integrations/crewai/cortex_crewai/: __init__.py  tools.py
integrations/langchain/: pyproject.toml
integrations/langchain/cortex_langchain/: __init__.py  tools.py
integrations/mcp-server/: README.md  package-lock.json  package.json
integrations/mcp-server/src/: index.ts
integrations/openclaw/: pyproject.toml  skill_manifest.json
integrations/openclaw/skills/: cortex_map.py  cortex_navigate.py
integrations/semantic-kernel/: pyproject.toml
packaging/homebrew/: cortex.rb
packaging/npm/: install.js  package.json
publication/: cortex-paper.tex
publication/paper-i-cortex/: cortex-paper.tex  references.bib
publication/paper-ii-agentic-vision-mcp/: agentic-vision-mcp-paper.tex  references.bib
runtime/: Cargo.toml
runtime/src/: dashboard.html  events.rs  lib.rs  main.rs  maintenance.rs  progress.rs  protocol.rs  rest.rs  server.rs
runtime/src/acquisition/: action_discovery.rs  api_discovery.rs  css_selectors.json  http_client.rs  js_analyzer.rs  mod.rs  pattern_engine.rs  platform_actions.json  structured.rs  webmcp.rs
runtime/src/audit/: logger.rs
runtime/src/cartography/: action_encoder.rs  feature_encoder.rs  mapper.rs  mod.rs  sitemap.rs
runtime/src/cli/: compile_cmd.rs  doctor.rs  install_cmd.rs  map_cmd.rs  mod.rs  pathfind_cmd.rs  perceive_cmd.rs  plug.rs  query_cmd.rs  registry_cmd.rs  start.rs  status.rs  stop.rs  temporal_cmd.rs  wql_cmd.rs
runtime/src/collective/: delta.rs  mod.rs  registry.rs  sync.rs
runtime/src/compiler/: actions.rs  codegen.rs  codegen_graphql.rs  codegen_mcp.rs  codegen_openapi.rs  codegen_python.rs  codegen_typescript.rs  mod.rs  models.rs  relationships.rs  schema.rs  unifier.rs
runtime/src/intelligence/: cache.rs  cross_site.rs  mod.rs  progressive.rs  smart_sampler.rs
runtime/src/live/: act.rs  session.rs
runtime/src/map/: builder.rs  deserializer.rs  serializer.rs  types.rs
runtime/src/renderer/: chromium.rs  mod.rs
runtime/src/temporal/: mod.rs  patterns.rs  query.rs  store.rs  watch.rs
runtime/src/trust/: credentials.rs
runtime/src/wql/: executor.rs  mod.rs  parser.rs  planner.rs
runtime/tests/: benchmarks.rs  v1_scoring_integration.rs
scripts/: bootstrap.sh  check-canonical-sister.sh  check-install-commands.sh  install-chromium.sh  install.sh  publish.sh
templates/sister-bootstrap/: README.template.md
tests/: test_gateway.py  test_harness_v2.py  test_harness_v3.py  test_plug.py
tests/integration/: test_mcp_clients.py  test_multi_agent.py
