[package]
name = "cortex-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rapid web cartographer for AI agents"
repository = "https://github.com/cortex-ai/cortex"
readme = "../README.md"
keywords = ["web", "cartography", "agent", "mcp", "navigation"]
categories = ["web-programming", "command-line-utilities"]

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
chromiumoxide = { version = "0.8", features = ["tokio-runtime"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
byteorder = "1.5"
memmap2 = "0.9"
quick-xml = "0.37"
url = "2.5"
regex = "1.11"
fnv = "1.0"
rayon = "1.10"
dashmap = "6"
petgraph = "0.6"
rand = "0.8"
base64 = "0.22"
which = "8.0.0"
scraper = "0.20"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
async-stream = "0.3"
tokio-stream = "0.1"
rustyline = "14"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
assert-json-diff = "2.0"
criterion = "0.5"
wiremock = "0.6"
