[package]
name = "agentic-vision"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core vision library for AgenticVision — image capture, embedding, similarity, and visual memory"
keywords = ["vision", "embedding", "clip", "image", "ai"]
categories = ["multimedia::images", "science"]
exclude = [".DS_Store"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
image = "0.25"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"
memmap2 = "0.9"
tracing = "0.1"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.9"
