[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-openclaw"
version = "0.3.2"
description = "OpenClaw skills for Cortex web cartography"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "cortex-agent>=0.1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/agentralabs/agentic-vision"

[tool.setuptools.packages.find]
include = ["skills*"]
